# MicroAcid303

./: .gitignore  CMakeLists.txt  TBStyleBassline_Ableton11_Windows_VST3_README.md
.context7/: architecture.json  coding-standards.json  dsp-rules.json  project.json
.github/workflows/: build-windows.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/core/: DSPModule.h  Parameters.h
Source/dsp/: Arpeggiator.cpp  Arpeggiator.h  Effects.cpp  Effects.h  Envelope.cpp  Envelope.h  LadderFilter.cpp  LadderFilter.h  Oscillator.cpp  Oscillator.h  Overdrive.cpp  Overdrive.h
Tests/: CMakeLists.txt  EnvelopeTests.cpp  LadderFilterTests.cpp  OscillatorTests.cpp
Windows_Plugin/303-Micro-Acid-VST3-Windows/: 303 Micro Acid.exp  303 Micro Acid.lib
